...

    Box(
        modifier = modifier.fillMaxSize(),
        contentAlignment = Alignment.TopCenter
    ) {
        LazyColumn(
            modifier = Modifier.fillMaxHeight().widthIn(max = 600.dp).testTag("watchlist_column"),
            state = lazyListState,
            contentPadding = PaddingValues(
                start = contentPadding.calculateStartPadding(LocalLayoutDirection.current),
                end = contentPadding.calculateEndPadding(LocalLayoutDirection.current),
                top = contentPadding.calculateTopPadding(),
                bottom = contentPadding.calculateBottomPadding()
...
                    },
            )
            Row(modifier = Modifier.padding(end = 16.dp)) {
                IconButton(onClick = { isSearchVisible = !isSearchVisible }) {
                    Icon(
                        imageVector = Icons.Default.Search,
                        contentDescription = "Search Watchlist",
                    )
                }
                Box {
                    IconButton(onClick = { isSortMenuExpanded = true }) {
                        Icon(
                            imageVector = Icons.Default.Menu,
...
